# scikit-vector-fields

./: LICENSE  README.md  pyproject.toml
src/scikit_vector_fields.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/skvf/: __init__.py  entities.py  module.py  operations.py  plot.py  vector.py
tests/: Hertz_dipole.py  Test_notebook.ipynb  current_element.py  current_loop.py  electric_charge.py  test_1.py  test_2.py  test_3.py  waveguide_rectangular.py
tests/Sample_data/: Details.md  WG_mode1_low_data_points_E_field_2D.h5  WG_mode1_low_data_points_E_field_2D.txt  WG_mode1_low_data_points_E_field_3D.h5  WG_mode1_low_data_points_E_field_3D.txt  WG_mode1_low_data_points_H_field_2D.h5  WG_mode1_low_data_points_H_field_2D.txt  WG_mode1_low_data_points_H_field_3D.h5  WG_mode1_low_data_points_H_field_3D.txt
