[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "scikit-vector-fields"
version = "0.0.1"
authors = [
  { name="Sarang Pendharker", email="sarang@ece.iitkgp.ac.in" },
]
description = "A package to perform vector field computations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

[project.urls]
"Homepage" = "https://github.com/sarang-IITKgp/scikit-vector-fields"
"Bug Tracker" = "https://github.com/sarang-IITKgp/scikit-vector-fields/issues"
